--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://apotenza92.github.io/blog/'
+baseURL = 'https://github.com/apotenza92/blog'
 languageCode = 'en-us'
 title = "Alex's Blog"
 theme = "PaperMod"
