Update URLs to point to the live GitHub Pages site and enable canonical URLs

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,4 @@ baseURL = 'https://github.com/apotenza92/blog'
 languageCode = 'en-us'
 title = "Alex's Blog"
 theme = "PaperMod"
+canonifyURLs = true
