--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://github.com/apotenza92/blog'
 languageCode = 'en-us'
 title = "Alex's Blog"
-theme = "PaperMod"
+theme = "ananke"
 canonifyURLs = true
