Update base URLs to point to the live GitHub Pages site

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseURL = 'https://github.com/apotenza92/blog'
+baseURL = 'https://apotenza92.github.io/blog/'
 languageCode = 'en-us'
 title = "Alex's Blog"
 theme = "ananke"
-canonifyURLs = true
+# canonifyURLs = true
