--- a/hugo.toml
+++ b/hugo.toml
@@ -74,71 +74,71 @@ url = "tags"
 
 [params.homeInfoParams]
 Title = "Hi there 👋"
-Content = "Welcome to my blog"
+Content = "Welcome"
 
-[[params.socialIcons]]
-name = "x"
-url = "https://x.com/"
+# [[params.socialIcons]]
+# name = "x"
+# url = "https://x.com/"
 
-[[params.socialIcons]]
-name = "stackoverflow"
-url = "https://stackoverflow.com"
+# [[params.socialIcons]]
+# name = "stackoverflow"
+# url = "https://stackoverflow.com"
 
-[[params.socialIcons]]
-name = "github"
-url = "https://github.com/"
+# [[params.socialIcons]]
+# name = "github"
+# url = "https://github.com/"
 
-[params.analytics.google]
-SiteVerificationTag = "XYZabc"
+# [params.analytics.google]
+# SiteVerificationTag = "XYZabc"
 
-[params.analytics.bing]
-SiteVerificationTag = "XYZabc"
+# [params.analytics.bing]
+# SiteVerificationTag = "XYZabc"
 
-[params.analytics.yandex]
-SiteVerificationTag = "XYZabc"
+# [params.analytics.yandex]
+# SiteVerificationTag = "XYZabc"
 
-[params.cover]
-hidden = true
-hiddenInList = true
-hiddenInSingle = true
+# [params.cover]
+# hidden = true
+# hiddenInList = true
+# hiddenInSingle = true
 
-[params.editPost]
-URL = "https://github.com/<path_to_repo>/content"
-Text = "Suggest Changes"
-appendFilePath = true
+# [params.editPost]
+# URL = "https://github.com/<path_to_repo>/content"
+# Text = "Suggest Changes"
+# appendFilePath = true
 
-[params.fuseOpts]
-isCaseSensitive = false
-shouldSort = true
-location = 0
-distance = 1000
-threshold = 0.4
-minMatchCharLength = 0
-limit = 10
-keys = ["title", "permalink", "summary", "content"]
+# [params.fuseOpts]
+# isCaseSensitive = false
+# shouldSort = true
+# location = 0
+# distance = 1000
+# threshold = 0.4
+# minMatchCharLength = 0
+# limit = 10
+# keys = ["title", "permalink", "summary", "content"]
 
-[[menu.main]]
-identifier = "categories"
-name = "categories"
-url = "/categories/"
-weight = 10
+# [[menu.main]]
+# identifier = "categories"
+# name = "categories"
+# url = "/categories/"
+# weight = 10
 
-[[menu.main]]
-identifier = "tags"
-name = "tags"
-url = "/tags/"
-weight = 20
+# [[menu.main]]
+# identifier = "tags"
+# name = "tags"
+# url = "/tags/"
+# weight = 20
 
-[[menu.main]]
-identifier = "example"
-name = "example.org"
-url = "https://example.org"
-weight = 30
+# [[menu.main]]
+# identifier = "example"
+# name = "example.org"
+# url = "https://example.org"
+# weight = 30
 
-[markup.highlight]
-noClasses = false
-# anchorLineNos = true
-# codeFences = true
-# guessSyntax = true
-# lineNos = true
-# style = "monokai"
+# [markup.highlight]
+# noClasses = false
+# # anchorLineNos = true
+# # codeFences = true
+# # guessSyntax = true
+# # lineNos = true
+# # style = "monokai"
